--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -5,11 +5,13 @@
         <div class="row">
           {% for block in section.blocks %}
             <div class="col-lg-4 col-md-6 col-12">
-              <div class="features-item wow fadeInUp" data-wow-duration="1000ms">
-                <img src="{{ block.settings.block_image | image_url: width: 100 }}" alt="" width="" height="">
-                <h3>{{ block.settings.title }}</h3>
-                <p>{{ block.settings.description }}</p>
-              </div>
+              <a href="{{ block.settings.link  }}">
+                <div class="features-item wow fadeInUp" data-wow-duration="1000ms">
+                  <img src="{{ block.settings.block_image | image_url: width: 100 }}" alt="" width="" height="">
+                  <h3>{{ block.settings.title }}</h3>
+                  <p>{{ block.settings.description }}</p>
+                </div>
+              </a>
             </div>
           {% endfor %}
         </div>
@@ -43,6 +45,12 @@
           "id": "description",
           "label": "Description",
           "default": "Our store uses SSL encryption to ensure your payment information is always secure"
+        },
+        {
+          "type": "text",
+          "id": "link",
+          "label": "Link",
+          "default": "#"
         }
       ]
     }
