--- a/sections/contact-info.liquid
+++ b/sections/contact-info.liquid
@@ -12,7 +12,7 @@
       <div class="row">
         {% for block in section.blocks %}
           <div class="col-lg-4 col-md-6 col-12">
-            <a href="{{ section.settings.link }}">
+            <a href="{{ block.settings.link }}">
               <div class="contact-info-item wow fadeInUp" data-wow-duration="1200ms">
                 <img src="{{ block.settings.block_image | image_url: width: 80 }}" alt="" width="40" height="40">
                 <h4>{{ block.settings.title }}</h4>
