--- a/sections/single-product.liquid
+++ b/sections/single-product.liquid
@@ -94,7 +94,7 @@
             >
 
             <div class="buy-btn">
-              <a href="#" class="theme-btn"
+              <a href="#" class="theme-btn addToCart"
                 >Add To Cart
                 <i
                   class="fa fa-shopping-cart"
