--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -83,7 +83,7 @@
                 </div>
               </div>
               <div class="header-login">
-                <a class="login-btn" href="login.html"
+                <a class="login-btn" href="/account/login"
                   ><i
                     class="fi flaticon-user-profile"
                   ></i
