--- a/assets/style.css
+++ b/assets/style.css
@@ -3604,3 +3604,118 @@ img {
 .faq-area .faq-wrap .accordion-item p {
   font-size: 16px;
 } /*# sourceMappingURL=style.css.map */
+.contact-area .wpo-contact-form-area {
+  padding: 40px;
+  box-shadow: 0px 2px 12px 2px rgba(4, 0, 52, 0.1);
+  border-radius: 10px;
+  max-width: 850px;
+  margin: 0 auto;
+}
+@media (max-width: 575px) {
+  .contact-area .wpo-contact-form-area {
+    padding: 20px;
+  }
+}
+.contact-area.warranty .wpo-contact-form-area {
+  max-width: 950px;
+}
+.contact-area .form-field {
+  margin-bottom: 20px;
+}
+.contact-area .form-field label {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+.contact-area .form-field label span {
+  top: -8px;
+  color: red;
+  position: relative;
+}
+.contact-area form input,
+.contact-area form select,
+.contact-area form textarea {
+  background: transparent;
+  width: 100%;
+  height: 50px;
+  border: 1px solid transparent;
+  border-radius: 0px;
+  box-shadow: none !important;
+  padding-left: 15px;
+  border: 1px solid #ebebeb;
+}
+@media (max-width: 991px) {
+  .contact-area form input,
+  .contact-area form select,
+  .contact-area form textarea {
+    height: 45px;
+  }
+}
+.contact-area form input:focus,
+.contact-area form select:focus,
+.contact-area form textarea:focus {
+  border-color: #08193a;
+  background: transparent;
+}
+.contact-area form textarea {
+  height: 180px;
+  padding-top: 15px;
+}
+.contact-area form ::-webkit-input-placeholder {
+  font-style: 15px;
+  font-style: normal;
+  color: #9d9c9c;
+}
+.contact-area form :-moz-placeholder {
+  font-style: 15px;
+  font-style: normal;
+  color: #9d9c9c;
+}
+.contact-area form ::-moz-placeholder {
+  font-style: 15px;
+  font-style: normal;
+  color: #9d9c9c;
+}
+.contact-area form :-ms-input-placeholder {
+  font-style: 15px;
+  font-style: normal;
+  color: #9d9c9c;
+}
+.contact-area form select {
+  display: inline-block;
+  color: #a9a9a9;
+  cursor: pointer;
+  opacity: 1;
+  padding: 6px 25px;
+  font-size: 15px;
+  font-size: 1rem;
+  -webkit-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  -moz-appearance: none;
+  background: transparent url(/assets/select-icon2.png) no-repeat calc(100% - 15px) center;
+  position: relative;
+}
+.contact-area form select:focus {
+  background: transparent url(/assets/select-icon2.png) no-repeat calc(100% - 15px) center;
+}
+.contact-area form .submit-area {
+  text-align: center;
+  width: 100%;
+  margin-left: 0;
+}
+@media (max-width: 767px) {
+  .contact-area form .submit-area {
+    margin-bottom: 0;
+  }
+}
+.contact-area form .submit-area .theme-btn,
+.contact-area form .submit-area .view-cart-btn {
+  border-radius: 0px;
+  font-family: 'Prompt', sans-serif;
+  font-size: 16px;
+}
+.contact-area form .submit-area .theme-btn:after,
+.contact-area form .submit-area .view-cart-btn:after {
+  border-radius: 0px;
+} /*# sourceMappingURL=style.css.map */
