--- a/assets/style.css
+++ b/assets/style.css
@@ -2947,6 +2947,8 @@ img {
 .features-section .features-item img {
   width: 60px;
   margin-bottom: 15px;
+}
+.featureImg {
   filter: invert(1);
 }
 .features-section .features-item p {
