--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -7,7 +7,7 @@
             <div class="col-lg-4 col-md-6 col-12">
               <a href="{{ block.settings.link  }}">
                 <div class="features-item wow fadeInUp" data-wow-duration="1000ms">
-                  <img src="{{ block.settings.block_image | image_url: width: 100 }}" alt="" width="" height="">
+                  <img class="featureImg" src="{{ block.settings.block_image | image_url: width: 100 }}" alt="" width="" height="">
                   <h3>{{ block.settings.title }}</h3>
                   <p>{{ block.settings.description }}</p>
                 </div>
