--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -1,34 +1,37 @@
-<section class="product-selling-section section-padding">
-  <div class="product-wrap">
-    <div class="container">
-      <div class="row">
-        {%- for product in collections %}
-          <div class="col-xl-3 col-lg-4 col-md-6 col-12">
-            <div class="product-item wow fadeInUp" data-wow-duration="1000ms">
-              <div class="product-image">
-                <img src="{{ product.featured_image | image_url: width: 700 }}" width="" height="" alt="">
-              </div>
-              <div class="product-info">
-                <h2>
-                  <a href="{{ product.url }}">{{ product.title }}</a>
-                </h2>
+{%- paginate collections.all.products by 50 -%}
+  <section class="product-selling-section section-padding">
+    <div class="product-wrap">
+      <div class="container">
+        <div class="row">
+          {% assign products_by_price = collection.products %}
+          {% assign collection = collection %}
+          {% for product in products_by_price %}
+            <div class="col-xl-3 col-lg-4 col-md-6 col-12">
+              <div class="product-item wow fadeInUp" data-wow-duration="1000ms">
+                <div class="product-image">
+                  <img src="{{ product.featured_image | image_url: width: 700 }}" width="" height="" alt="">
+                </div>
+                <div class="product-info">
+                  <h2>
+                    <a href="{{ product.url }}">{{ product.title }}</a>
+                  </h2>
 
-                <a
-                  href="#"
-                  class="theme-btn sliderAddToCart"
-                  data-itemid="{{ product.variants.first.id }}"
-                  data-currency="{{ cart.currency.symbol -}}"
-                  >Add to cart</a
-                >
+                  <a
+                    href="#"
+                    class="theme-btn sliderAddToCart"
+                    data-itemid="{{ product.variants.first.id }}"
+                    data-currency="{{ cart.currency.symbol -}}"
+                    >Add to cart</a
+                  >
+                </div>
               </div>
             </div>
-          </div>
-        {% endfor %}
+          {% endfor %}
+        </div>
       </div>
     </div>
-  </div>
-</section>
-
+  </section>
+{%- endpaginate -%}
 {% schema %}
 {
   "name": "Collection Section",
