--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -15,6 +15,10 @@
                   <h2>
                     <a href="{{ product.url }}">{{ product.title }}</a>
                   </h2>
+                  <p class="prdPrice">
+                    {{ cart.currency.symbol -}}
+                    {{- product.price | money_without_currency }}
+                  </p>
 
                   <a
                     href="#"
