--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -23,7 +23,7 @@
                   src="{{ block.settings.hero_background_image |  image_url: width: 1920 }}"
                   width=""
                   height=""
-                  alt=""
+                  alt="{{ block.settings.hero_background_image.alt }}"
                 >
               </div>
             </div>
