--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -59,7 +59,7 @@
             <div class="loader-line-mask">
               <div class="loader-line"></div>
             </div>
-            <img src="{{ 'preloader.png' | asset_url }}" alt="" width="" height="">
+            <img src="{{ 'preloader.png' | asset_url }}" alt="perloader" width="" height="">
           </div>
         </div>
       </div>
