--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -9,7 +9,12 @@
             <div class="col-xl-3 col-lg-4 col-md-6 col-12">
               <div class="product-item wow fadeInUp" data-wow-duration="1000ms">
                 <div class="product-image">
-                  <img src="{{ product.featured_image | image_url: width: 700 }}" width="" height="" alt="">
+                  <img
+                    src="{{ product.featured_image | image_url: width: 700 }}"
+                    width=""
+                    height=""
+                    alt="{{ product.featured_image.alt }}"
+                  >
                 </div>
                 <div class="product-info">
                   <h2>
