--- a/sections/contact-info.liquid
+++ b/sections/contact-info.liquid
@@ -14,7 +14,12 @@
           <div class="col-lg-4 col-md-6 col-12">
             <a href="{{ block.settings.link }}">
               <div class="contact-info-item wow fadeInUp" data-wow-duration="1200ms">
-                <img src="{{ block.settings.block_image | image_url: width: 80 }}" alt="" width="40" height="40">
+                <img
+                  src="{{ block.settings.block_image | image_url: width: 80 }}"
+                  alt="{{ block.settings.block_image.alt }}"
+                  width="40"
+                  height="40"
+                >
                 <h4>{{ block.settings.title }}</h4>
               </div>
             </a>
