--- a/sections/single-product.liquid
+++ b/sections/single-product.liquid
@@ -14,7 +14,13 @@
             {% for media in product.media %}
               {% if media.media_type == 'image' %}
                 <div class="item">
-                  <img id="prdImg" src="{{ media.src | image_url: width: 1920  }}" alt="" width="" height="">
+                  <img
+                    id="prdImg"
+                    src="{{ media.src | image_url: width: 1920  }}"
+                    alt="{{ media.srca.alt }}"
+                    width=""
+                    height=""
+                  >
                 </div>
               {% endif %}
             {% endfor %}
@@ -23,7 +29,7 @@
             {% for media in product.media %}
               {% if media.media_type == 'image' %}
                 <div class="item">
-                  <img src="{{ media.src | image_url: width: 300  }}" alt="" width="" height="">
+                  <img src="{{ media.src | image_url: width: 300  }}" alt="{{ media.src.alt }}" width="" height="">
                 </div>
               {% endif %}
             {% endfor %}
@@ -118,7 +124,12 @@
                         aria-expanded="true"
                         aria-controls="collapse{{forloop.index}}"
                       >
-                        <img src="{{ block.settings.icon | image_url: width: 50  }}" width="" height="" alt="">
+                        <img
+                          src="{{ block.settings.icon | image_url: width: 50  }}"
+                          width=""
+                          height=""
+                          alt="{{ block.settings.icon.alt }}"
+                        >
                         {{ block.settings.title }}
                       </button>
                     </h3>
