--- a/sections/warranty-section.liquid
+++ b/sections/warranty-section.liquid
@@ -17,7 +17,12 @@
           <div class="col-lg-4 col-md-6 col-12">
             <div class="service-item wow fadeInUp" data-wow-duration="1200ms">
               <div class="service-img">
-                <img src="{{ block.settings.block_image |  image_url: width: 800 }}" width="" height="" alt="">
+                <img
+                  src="{{ block.settings.block_image |  image_url: width: 800 }}"
+                  width="{{ block.settings.block_image.alt }}"
+                  height=""
+                  alt=""
+                >
               </div>
             </div>
           </div>
