--- a/assets/style.css
+++ b/assets/style.css
@@ -3730,6 +3730,15 @@ img {
   align-items: center;
   justify-content: start;
   gap: 10px;
-  color: #000;
-  margin-top: 20px;
+  color: #fff;
+}
+.downloadManual {
+  background: #08193a;
+  display: inline-block;
+  margin-top: 30px;
+  border-radius: 10px;
+  padding: 13px 20px;
+}
+.downloadManual img {
+  filter: invert(1);
 }
