--- a/sections/about-area.liquid
+++ b/sections/about-area.liquid
@@ -21,6 +21,7 @@
                     alt="{{ block.settings.item_image.alt }}"
                     width=""
                     height=""
+                    loading="lazy"
                   >
                   <div class="b-text">
                     <span>{{ block.settings.item_title }}</span>
