--- a/sections/about-feature.liquid
+++ b/sections/about-feature.liquid
@@ -9,6 +9,7 @@
               alt="{{ block.settings.block_image.alt }}"
               width=""
               height=""
+              loading="lazy"
             >
           </div>
           <div class="about-features-text wow fadeInUp" data-wow-duration="1400ms">
