--- a/sections/about-section.liquid
+++ b/sections/about-section.liquid
@@ -9,6 +9,7 @@
               alt="{{ section.settings.section_image.alt }}"
               width=""
               height=""
+              loading="lazy"
             >
           </div>
         </div>
