--- a/sections/contact-info.liquid
+++ b/sections/contact-info.liquid
@@ -19,6 +19,7 @@
                   alt="{{ block.settings.block_image.alt }}"
                   width="40"
                   height="40"
+                  loading="lazy"
                 >
                 <h4>{{ block.settings.title }}</h4>
               </div>
