--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -24,6 +24,7 @@
                   width=""
                   height=""
                   alt="{{ block.settings.hero_background_image.alt }}"
+                  loading="lazy"
                 >
               </div>
             </div>
