--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -13,6 +13,7 @@
                     alt="{{ block.settings.block_image.alt }}"
                     width=""
                     height=""
+                    loading="lazy"
                   >
                   <h3>{{ block.settings.title }}</h3>
                   <p>{{ block.settings.description }}</p>
