--- a/sections/search.liquid
+++ b/sections/search.liquid
@@ -16,6 +16,7 @@
                       width=""
                       height=""
                       alt="{{ product.featured_image.alt }}"
+                      loading="lazy"
                     >
                   </div>
                   <div class="product-info">
