--- a/sections/warranty-section.liquid
+++ b/sections/warranty-section.liquid
@@ -22,6 +22,7 @@
                   width="{{ block.settings.block_image.alt }}"
                   height=""
                   alt=""
+                  loading="lazy"
                 >
               </div>
             </div>
