--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -14,6 +14,7 @@
                     width=""
                     height=""
                     alt="{{ product.featured_image.alt }}"
+                    loading="lazy"
                   >
                 </div>
                 <div class="product-info">
