--- a/sections/feature-section.liquid
+++ b/sections/feature-section.liquid
@@ -23,6 +23,7 @@
                       alt="{{ block.settings.block_image.alt }}"
                       width=""
                       height=""
+                      loading="lazy"
                     >
                     <h3>{{ block.settings.title }}</h3>
                     <p>{{ block.settings.description }}</p>
